<resources>
    <string name="app_name">FoodOrdering2</string>
    <string name="action_settings">Settings</string>
    <string name="message_1">Name</string>
    <string name="message_2">Price</string>
    <string name="message_3">Food No</string>
    <string name="message_4">Food No</string>
    <string name="message_5">Contact Number</string>
    <string name="button">Back</string>
    <string name="button_3">Submit</string>string>
    <string name="button_1">Feedback</string>
    <string name="message_6">Give your rating</string>
    <string name="message_7">Give your Feedback</string>
    <string name="button_2">Submit</string>
    <string name="message_8">Rate Now</string>
    <string name="message_9">Payment</string>
    <string name="message_10">Debit/Credit card No</string>
    <string name="ULogin">--LOGIN--</string>
    <string name="USname">Username</string>
    <string name="USPword">Password</string>
    <string name="USlog">CONTINUE</string>
    <string name="Info">No of attempts remaining:</string>
    <string name="CRaccount">CREATE ACCOUNT</string>
    <string name="UReg">--REGISTRATION--</string>
    <string name="UName">User name</string>
    <string name="UEmail">E-mail</string>
    <string name="UPword">Password</string>
    <string name="UPWagain">Password again</string>
    <string name="UFin">--FINISH--</string>
    <string name="Uals">Already sign ? Login</string>
    <string name="button_5">Submit</string>
    <string name="order_food_name">Name</string>
    <string name="order_food_price">Price</string>
    <string name="btn_purchase">Purchase Order</string>
    <string name="adminLink">I\'m a admin?</string>
    <string name="userLink">I\'m not a admin?</string>
    <string name="message_20">Payment Method</string>
    <string name="message21">UPDATE</string>
    <string name="message18">Show</string>
</resources>
